project2/test/test_2_1.out
Error type 13 at Line 4: accessing with non-struct variable
Error type 3 at Line 5: redefine variable: b
