project2/test/test_2_1.spl
int foo()
{
  int a = 10;
  int b = a.a;
  float b = 1.0;
  return (a / 3) * a;
}